quiz editing: MDL-17451 CSS and whitespace fixes to truncate overlong question category name
Tested on opera 9.27, IE6, Firefox 3 on Ubuntu Linux 8.04

--- a/theme/standard/styles_color.css
+++ b/theme/standard/styles_color.css
@@ -1134,6 +1134,13 @@ bank window's title is prominent enough*/
 #mod-quiz-edit .questioncontentcontainer div.randomquestionqlist ul{
     color:#555;
 }
+#mod-quiz-edit div.question div.content div.singlequestion .questionpreview{
+    background-color:#eee;
+}
+
+#mod-quiz-edit div.question div.content .questionpreview a{
+    background-color:#eee;
+}
 #mod-quiz-edit .questioncontentcontainer div.randomquestionqlist .totalquestionsinrandomqcategory{
     color:#000;
 }
