--- a/theme/standard/styles_ie6.css
+++ b/theme/standard/styles_ie6.css
@@ -69,11 +69,12 @@ form.mform textarea {
 #mod-quiz-review #middle-column {
   height: 1%;
 }
-#mod-quiz-edit div.question div.content .questionname,
-#categoryquestions .questionname{
+#mod-quiz-edit div.question div.content .questiontext,
+#mod-quiz-edit #categoryquestions .questionname{
     /*ie6 shows this as an arrow if this is not specified*/
     cursor: pointer;
 }
+#mod-quiz-edit div.question div.content .questionname,
 #mod-quiz-edit #categoryquestions .questiontext{
     /*ie6 shows this as an arrow if this is not specified*/
     cursor: pointer;
@@ -89,4 +90,10 @@ form.mform textarea {
 }
 #mod-quiz-edit div.question div.content .questionname,#categoryquestions .questionname{
     width:20%;
+}
+#mod-quiz-edit .editq div.question div.content .randomquestioncategory a{
+    width:40%;
+}
+#mod-quiz-edit .reorder .questioncontentcontainer .randomquestioncategory label{
+    width: 35%;
 }
